--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+apiKey="6e9f93910aec59d17b0f0ad5667807b3"
+hash="0782f2a06cb81811b9652eb06e6c9ea0"
