--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
-        buildConfigField("String", "API_KEY", apiKey)
-        buildConfigField ("String", "hash",hash)
+//        buildConfigField("String", "API_KEY", apiKey)
+      //  buildConfigField ("String", "hash",hash)
     }
 
     buildTypes {
