--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,14 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
+def getLocalProperties() {
+    Properties props = new Properties()
+    if (file('../local.properties').exists()) {
+        props.load(new FileInputStream(file('../local.properties')))
+    }
+    return props
+}
+
 android {
     compileSdk 32
 
@@ -22,8 +30,9 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
-//        buildConfigField("String", "API_KEY", apiKey)
-      //  buildConfigField ("String", "hash",hash)
+
+        buildConfigField "String", 'CREDENTIALS_API_KEY', System.getenv("CREDENTIALS_API_KEY") ?: localProperties["apiKey"]
+        buildConfigField "String", 'CREDENTIALS_HASH', System.getenv("CREDENTIALS_HASH") ?: localProperties["hash"]
     }
 
     buildTypes {
